added gradient background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <div class = "box">
     <div class="container">
         <form class="form" id="login">
             <h1 class="form__title">Login</h1>
@@ -45,6 +46,7 @@
                 <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
             </p>
         </form>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
