--- a/edituser.html
+++ b/edituser.html
@@ -5,7 +5,7 @@
     <title>Login / Sign Up Form</title>
     <link rel="stylesheet" href="./main.css">
 </head>
-
+<div class = "wrapper">
 <body>
     <div class="box">
         <div class="container">
@@ -13,7 +13,6 @@
             <h1 class="form__title">Edit Username</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Username" id = username>
                 <div class="form__input-error-message"></div>
                 <div class="form__input-group">
                     <div class="form__input-error-message"></div>
@@ -45,3 +44,4 @@
 <script src="edituser.js"></script>
 
 </body>
+</div>
