--- a/edituser.html
+++ b/edituser.html
@@ -5,10 +5,10 @@
     <title>Login / Sign Up Form</title>
     <link rel="stylesheet" href="./main.css">
 </head>
-<div class = "wrapper">
-<body>
+<body> 
     <div class="box">
-        <div class="container">
+<div class = "container">
+    
         <form class="form" id="Username">
             <h1 class="form__title">Edit Username</h1>
             <div class="form__message form__message--error"></div>
@@ -34,6 +34,8 @@
         </form>
     </div>
 </div>
+    </body>
+</body>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
   function addDarkmodeWidget() {
@@ -41,7 +43,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-<script src="edituser.js"></script>
-
+<script src="editpass.js"></script>
 </body>
-</div>
+ 
