fixed correct js file

--- a/editpass.html
+++ b/editpass.html
@@ -10,7 +10,7 @@
 <div class = "container">
     
         <form class="form" id="Username">
-            <h1 class="form__title">Edit Password</h1>
+            <h1 class="form__title">Edit Username</h1>
             <div class="form__message form__message--error"></div>
             <div class="form__input-group">
                 <div class="form__input-error-message"></div>
@@ -19,11 +19,11 @@
                 </div>
             </div>
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="New Password" id = newPass>
+                <input type="text" class="form__input" autofocus placeholder="New Username" id = newUser>
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" id = "confirmPass" class="form__input" autofocus placeholder="Confirm New Password">
+                <input type="text" id = "confirmUser" class="form__input" autofocus placeholder="Confirm New Username">
                 <div class="form__input-error-message"></div>
             </div>
             <button class="form__button" type="submit">Continue</button>
@@ -43,6 +43,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-<script src="editpass.js"></script>
+<script src="edituser.js"></script>
 </body>
  
