--- a/edituser.html
+++ b/edituser.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="New Username" id = newUser>
+                <input type="text" class="form__input" autofocus placeholder="New Username" id = "newUser">
                 <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
@@ -43,6 +43,6 @@
   }
   window.addEventListener('load', addDarkmodeWidget);
 </script>
-<script src="editpass.js"></script>
+<script src="edituser.js"></script>
 </body>
  
