--- a/contactPage.html
+++ b/contactPage.html
@@ -49,7 +49,7 @@
 						<br> 
 						<input type="range" id="size-slider" min="16" max="50" value="18">
 					</div>
-						<button>Log Out</button>
+						<button id = "logout">Log Out</button>
 					</div>
 				</div>	
 			</form>
