changed from submit to confirm

--- a/editpass.html
+++ b/editpass.html
@@ -26,7 +26,7 @@
                 <input type="password" id = "confirmPass" class="form__input" autofocus placeholder="Confirm New Password">
                 <div class="form__input-error-message"></div>
             </div>
-            <button class="form__button" type="submit" id = "Submit">Submit</button>
+            <button class="form__button" type="submit" id = "Submit">Confirm</button>
             <p class="form__text">
                 <button class="form__button" type="button" id = "Cancel">Cancel</button>
 
