--- a/edituser.html
+++ b/edituser.html
@@ -26,9 +26,9 @@
                 <input type="text" id = "confirmUser" class="form__input" autofocus placeholder="Confirm New Username">
                 <div class="form__input-error-message"></div>
             </div>
-            <button class="form__button" type="submit">Continue</button>
+            <button class="form__button" type="submit">Confirm</button>
             <p class="form__text">
-                <a class="form__link" href="contactPage.html" id="linkCreateAccount">Return</a>
+                <button class="form__button" type="button" id = "Cancel">Cancel</button>
             </p>
             <p class="form__text">
             </p>
