--- a/contactPage.html
+++ b/contactPage.html
@@ -2,7 +2,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">	
-	<title>Contacts Page</title>
+	<title>Contacts Page (test)</title>
 	<link href="contactPage.css" rel="stylesheet">
 
 </head>
