--- a/contactPage.html
+++ b/contactPage.html
@@ -162,7 +162,11 @@
 	
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src = "contactPage.js"></script>
+<script src = "contactPage/helper.js"></script>
+<script src = "contactPage/contactAdd.js"></script>
+<script src = "contactPage/contactInfo.js"></script>
+<script src = "contactPage/contactTable.js"></script>
+<script src = "contactPage/settings.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
 <script>
