--- a/contactPage.html
+++ b/contactPage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class ="wrapper">
-		<div class = "container" id = "container">
+		<div class = "container" id = "contactTable">
 			<h1 class="form__title">Contacts</h1>
 
 
