--- a/contactPage.html
+++ b/contactPage.html
@@ -15,14 +15,16 @@
 			<input type="text" id = "searchBar">
 			<button onclick = "searchTable()">Search</button>
 
-			<table id="contactList">
-				<tr>
-					<th> First Name </th>
-					<th> Last Name </th>
-					<th> Phone Number </th>
-					<th> Email </th>
-				</tr>
-			</table>
+			<div id = "scroller">
+				<table id="contactList">
+					<tr>
+						<th> First Name </th>
+						<th> Last Name </th>
+						<th> Phone Number </th>
+						<th> Email </th>
+					</tr>
+				</table>
+			</div>
 
 			<button id="addContactButton" onclick = "showAddContactPage()">Add Contact</button>
 
