--- a/contactPage.html
+++ b/contactPage.html
@@ -15,7 +15,7 @@
 			<input type="text" id = "searchBar">
 			<button onclick = "searchTable()">Search</button>
 
-			
+			<div id = "scroller">
 				<table id="contactList">
 					<tr>
 						<th> First Name </th>
@@ -23,8 +23,8 @@
 						<th> Phone Number </th>
 						<th> Email </th>
 					</tr>
-					<div id = "scroller"></div>
 				</table>
+			</div>
 
 			<button id="addContactButton" onclick = "showAddContactPage()">Add Contact</button>
 
