fixed delete button being impervious to dark mode

--- a/contactPage.html
+++ b/contactPage.html
@@ -31,9 +31,9 @@
 			<div class = "buttonParent">
 
 
-			<div class="form__input-group">
+			<form>
 				<button onclick = "deleteSelected()">delete</button>
-			</div>
+			</form>
 
 			<form>
 				<div id = "settingsBar">
