--- a/contactPage.html
+++ b/contactPage.html
@@ -32,7 +32,7 @@
 
 
 			<form>
-				<button onclick = "deleteSelected()">delete</button>
+				<button onclick = "deleteSelected()">Delete</button>
 			</form>
 
 			<form>
